# voicekick

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
command-parser/: Cargo.toml
command-parser/src/: error.rs  lib.rs
inference-candle/: Cargo.toml
inference-candle/src/: lib.rs  proto.rs
input-voice/: Cargo.toml
input-voice/src/: lib.rs  resampler.rs  traits.rs  voice.rs
voice-stream/: Cargo.toml  README.md
voice-stream/src/: lib.rs  resampler.rs  sound.rs  traits.rs  voice.rs
voice-stream/tests/: preprocess_test.rs  resampler_test.rs  voice_detection_test.rs
voice-tests/: Cargo.toml  README.md
voice-tests/examples/: input_stream.rs  input_stream_voice.rs  input_stream_voice_playback.rs  input_stream_voice_record.rs  input_stream_whisper.rs  input_stream_whisper_command_parser.rs
voice-tests/src/: lib.rs
voice-tests/tests/: test_command_parser.rs  test_triage_whisper_models.rs  test_whisper_harvard_list.rs  test_whisper_jfk.rs
voice-whisper/: Cargo.toml  README.md
voice-whisper/src/: audio.rs  builder.rs  lib.rs  multilingual.rs
voicekick/: Cargo.toml
voicekick-dioxus/: Cargo.toml  Makefile
voicekick-dioxus/commands/: Cargo.toml
voicekick-dioxus/commands/src/: http_command.rs  lib.rs  voicelog_command.rs
voicekick-dioxus/commands/src/llm/: anthropic.rs  deepseek.rs  google.rs  mod.rs  ollama.rs  openai.rs
voicekick-dioxus/desktop/: Cargo.toml  Dioxus.toml
voicekick-dioxus/desktop/assets/: commands_box.css  main.css  waveform.css  whisper.css
voicekick-dioxus/desktop/src/: commands.rs  main.rs
voicekick-dioxus/desktop/src/commands/: mod.rs
voicekick-dioxus/desktop/src/components/: commands_box.rs  mod.rs  progress.rs  segments_log.rs  voice.rs  waveform.rs  whisper.rs
voicekick-dioxus/desktop/src/services/: mod.rs  segments_service.rs  server_service.rs  voicekick_service.rs
voicekick-dioxus/desktop/src/states/: mod.rs
voicekick-dioxus/desktop/src/views/: home.rs  mod.rs  whisper.rs
voicekick-dioxus/proto/: Cargo.toml
voicekick-dioxus/proto/src/: lib.rs
voicekick-dioxus/server/: Cargo.toml
voicekick-dioxus/server/src/: database.rs  error.rs  events.rs  extractors.rs  lib.rs  params.rs  state.rs
voicekick-dioxus/ui/: Cargo.toml
voicekick-dioxus/ui/assets/styling/: navbar.css
voicekick-dioxus/ui/src/: hero.rs  navbar.rs
