[workspace]
resolver = "2"

members = [
  "voice-stream",
  "voice-tests",
  "voicekick",
  "inference-candle",
  "voice-whisper",
  "command-parser",
]

[profile.release]
opt-level = 3
lto = true              # Sets link-time optimization.
codegen-units = 1
debug = false             # Include debug info.
debug-assertions = false  # Enables debug assertions.
overflow-checks = false
panic = 'abort'         # The panic strategy.
incremental = true       # Incremental compilation.
strip = true

[workspace.dependencies]
tracing = "0.1.41"
