[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 0
debug-assertions = false
panic = "abort"
overflow-checks = false
incremental = true
strip = true

[workspace]
members = [
    "command-parser",
    "inference-candle",
    "voice-stream",
    "voice-tests",
    "voice-whisper",
    "voicekick",
]

exclude = [
    "voicekick-dioxus",
    "voice-stream",
]

resolver = "2"

[workspace.dependencies]
tracing = "0.1.41"
