[package]
name = "voice-stream"
version = "0.3.0"
edition = "2021"
description = """
Voice stream is a real-time audio stream processing with voice activity detection.
This library provides a high-level interface for capturing audio input, performing voice detection using Silero VAD, and processing audio streams.
"""

homepage = "https://github.com/voicekick/voicekick"
repository = "https://github.com/voicekick/voicekick"
license = "BSD-3-Clause"
documentation = "https://docs.rs/voice-stream"

[features]
windows = ["cpal/asio"]
linux = ["cpal/jack"]

[dependencies]
cpal = { version = "0.15", default-features = false, features = [] }
rubato = { version = "0.16", default-features = false, features = ["fft_resampler"] }
tracing = { workspace = true }
voice_activity_detector = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
voice-tests= { path = "../voice-tests" }
