[package]
name = "voice-whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-nn = { version = "0.7", default-features = false, features = ["metal", "accelerate"] }
candle-transformers = { version = "0.7", default-features = false, features = ["metal", "accelerate"] }
inference-candle = { path = "../inference-candle" }
rand = "0.8"
candle-core = { version = "0.7", default-features = false, features = ["metal", "accelerate"] }
tokenizers = "0.20"
hf-hub = "0.3"
serde_json = "1"
byteorder = "1"
num-traits = "0.2"
mel_spec = "0.2"
tracing = "0.1"
