[package]
name = "voice-whisper"
version = "0.1.0"
edition = "2021"

[features]
default = []
metal-compute = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate-compute = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[target.'cfg(target_os = "macos")'.dependencies]
candle-nn = { version = "0.8", default-features = false, features = ["metal", "accelerate"] }
candle-transformers = { version = "0.8", default-features = false, features = ["metal", "accelerate"] }
candle-core = { version = "0.8", default-features = false, features = ["metal", "accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
candle-core = { version = "0.8", default-features = false }

[dependencies]
inference-candle = { path = "../inference-candle" }
rand = "0.8"
tokenizers = "0.21"
hf-hub = "0.3"
serde_json = "1"
byteorder = "1"
mel_spec = "0.2"
tracing = { workspace = true }
