[workspace]
resolver = "2"
members = [
  "ui",
  "desktop",
  "server",
  "proto",
  "commands",
]

[workspace.dependencies]
dioxus = { version = "0.6.0", default-features = false, features = ["html"] }

# workspace
ui = { path = "ui" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
