[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
command-parser = { path = "../../command-parser" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "hickory-dns", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
proto = { path = "../proto" }
