[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
voice-stream = { path = "../../voice-stream" }
voice-whisper = { path = "../../voice-whisper" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.31"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
