[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["tokio", "json", "http1", "http2", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
proto = { path = "../proto" }

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "macros"]
